# simpute-py

./: .gitignore  CHANGELOG.md  CONDUCT.html  CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.html  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci-no-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: dummy.ipynb
src/simpute_py/: __init__.py  all_imputer.py  bol_imputer.py  cat_imputer.py  date_imputer.py  num_imputer.py  simpute_py.py
tests/: tesla_deaths.csv  tesla_deaths_mini.csv  test_bol_imputer.py  test_bool_simpute_py.py  test_cat_imputer.py  test_date_imputer.py  test_num_imputer.py  test_simpute_py.py
