[tool.poetry]
name = "simpute_py"
version = "0.0.4"
description = "A python package for simple data imputation"
authors = ["Ken Wang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5"
scikit-learn = "^1.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0"
pytest = "^7.2"
sphinx-autoapi = "^2.0"
sphinx-rtd-theme = "^1.1"
myst-nb = "^0.17"
python-semantic-release = "^7.32"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
python-semantic-release = "^7.33.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "master"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
